--- a/.github/workflows/use-shared-workflow.yml
+++ b/.github/workflows/use-shared-workflow.yml
@@ -24,9 +24,34 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+
       - name: Push to Main-Production
         run: |
           git checkout -b main-production
           git push origin main-production
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_MAX }}
+name: Use Shared Ansible Lint Workflow
+
+on: [push, pull_request]
+
+jobs:
+  call-shared-workflow:
+    uses: XXXX/tst-shared-pipeline/.github/workflows/ansible-lint.yml@main
+    with:
+      repository: ${{ github.repository }}
+  
+  push-to-production:
+    runs-on: ubuntu-latest
+    needs: [call-shared-workflow]
+    if: ${{ needs.call-shared-workflow.result == 'success' }}
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v2
+      with:
+        ref: main
+        token: ${{ secrets.PAT_MAX }}
+    - name: Push to Main-Production
+      run: |
+        git checkout -b main-production
+        git push https://${{ secrets.MY_PAT }}@github.com/${{ github.repository }}/main-production
