--- a/.github/workflows/use-shared-workflow.yml
+++ b/.github/workflows/use-shared-workflow.yml
@@ -7,7 +7,8 @@ jobs:
     uses: AdrienMS-Cap/tst-shared-pipeline/.github/workflows/ansible-lint.yml@main
     with:
       repository: ${{ github.repository }}
-  
+        token: ${{ secrets.MY_PAT }} # or your PAT if necessary
+
   push-to-production:
     runs-on: ubuntu-latest
     needs: [call-shared-workflow]
