--- a/.github/workflows/use-shared-workflow.yml
+++ b/.github/workflows/use-shared-workflow.yml
@@ -15,13 +15,32 @@ jobs:
     needs: [call-shared-workflow]
     if: ${{ needs.call-shared-workflow.result == 'success' }}
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
+     - name: Checkout Main-Production Branch
+      uses: actions/checkout@v2
+      with:
+        ref: main-production
+
+    - name: Merge Triggering Branch
+      run: |
+        git fetch origin ${{ github.head_ref }}
+        git merge origin/${{ github.head_ref }} --no-ff --no-commit
+
     - name: Push to Main-Production
       run: |
-        git checkout -b main-production
         git config user.name "mypipelienname"
         git config user.email "test@mail.com"
-        git commit -am "Automated report"
-        git push        
+        git commit -m "Merged branch ${{ github.head_ref }} into main-production"
+        git push origin main-production
+  
 
+
+
+# name: Use Shared Ansible Lint Workflow
+
+# on:
+#   push:
+#     branches-ignore:
+#       - main-production
+#   pull_request:
+#     branches:
+#       - main
