--- a/.github/workflows/use-shared-workflow.yml
+++ b/.github/workflows/use-shared-workflow.yml
@@ -5,20 +5,20 @@ permissions:
   contents: write
 jobs:
   call-shared-workflow:
-    uses: AdrienMS-Cap/tst-shared-pipeline/.github/workflows/ansible-lint.yml@main
+    uses: XXX/tst-shared-pipeline/.github/workflows/ansible-lint.yml@main
     secrets: inherit
     with:
       repository: ${{ github.repository }}
-
-  push-to-production:
+ push-to-production:
     runs-on: ubuntu-latest
     needs: [call-shared-workflow]
     if: ${{ needs.call-shared-workflow.result == 'success' }}
     steps:
-     - name: Checkout Main-Production Branch
+    - name: Checkout Main-Production Branch
       uses: actions/checkout@v2
       with:
         ref: main-production
+        token: ${{ secrets.PAT_MAX }}
 
     - name: Merge Triggering Branch
       run: |
@@ -27,11 +27,10 @@ jobs:
 
     - name: Push to Main-Production
       run: |
-        git config user.name "mypipelienname"
-        git config user.email "test@mail.com"
+        git config user.name "Your GitHub Username"
+        git config user.email "Your GitHub Email"
         git commit -m "Merged branch ${{ github.head_ref }} into main-production"
-        git push origin main-production
-  
+        git push https://${{ secrets.PAT_MAX }}@github.com/XXX/tst-repo1.git main-production
 
 
 
