--- a/.github/workflows/use-shared-workflow.yml
+++ b/.github/workflows/use-shared-workflow.yml
@@ -27,16 +27,18 @@ jobs:
           else
             BRANCH=${GITHUB_REF#refs/heads/}
           fi
+          git config user.name "piptest"
+          git config user.email "emailpi@mail.com"          
           git fetch origin
           git merge origin/$BRANCH --no-ff --no-commit
 
 
       - name: Push to Main-Production
         run: |
-          git config user.name "Your GitHub Username"
-          git config user.email "Your GitHub Email"
+          git config user.name "piptest"
+          git config user.email "emailpi@mail.com"
           git commit -m "Merged branch ${{ github.head_ref }} into main-production"
-          git push https://${{ secrets.PAT_MAX }}@github.com/XXX/tst-repo1.git main-production
+          git push https://${{ secrets.PAT_MAX }}@github.com/AdrienMS-Cap/tst-repo1.git main-production
 
 
 
