--- a/.github/workflows/use-shared-workflow.yml
+++ b/.github/workflows/use-shared-workflow.yml
@@ -6,10 +6,7 @@ permissions:
 jobs:
   call-shared-workflow:
     uses: AdrienMS-Cap/tst-shared-pipeline/.github/workflows/ansible-lint.yml@main
-    secrets: inherit
-    with:
-      repository: ${{ github.repository }}
-  push-to-production:
+  push-to-branch--main-production:
       runs-on: ubuntu-latest
       needs: [call-shared-workflow]
       if: ${{ needs.call-shared-workflow.result == 'success' }}
@@ -18,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: main-production
-          token: ${{ secrets.PAT_MAX }}
+          token: ${{ github.token }}
 
       - name: Merge Triggering Branch
         run: |
