--- a/hello.yml
+++ b/hello.yml
@@ -2,6 +2,7 @@
 - name: Hello World Example
   hosts: localhost
   tasks:
-    - name: Print Hello World
-      ansible.builtin.debug:
-        msg: "Hello world, it's meee"
+    - name: Print Hello World with Current Time
+      hello_world:
+        msg: "Hello world, it's me"
+        current_time: "{{ lookup('pipe', 'date +%Y/%m/%d -- %H:%M:%S') }}"
