--- a/.github/workflows/use-shared-workflow.yml
+++ b/.github/workflows/use-shared-workflow.yml
@@ -7,7 +7,7 @@ permissions:
 
 jobs:
   call-shared-workflow:
-    uses: AdrienMS-Cap/tst-shared-pipeline/.github/workflows/ansible-lint.yml@main
+    uses: AdrienMS-Cap/tst-shared-pipeline/.github/workflows/start_create_workflow@main
     with:
       repository: ${{ github.repository }}
       branch: ${{ github.ref_name }} 
