--- a/hello.yml
+++ b/hello.yml
@@ -4,4 +4,4 @@
   tasks:
     - name: Print Hello World
       ansible.builtin.debug:
-        msg: "Hello world, it's me and it's 19h49 !"
+        msg: "Hello world, it's me and it's 19h49"
