--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,12 +1,15 @@
-# name: Call Shared Pull Request Workflow
+name: Call Shared Pull Request Workflow
 
-# on: [pull_request]
+on:
+  pull_request:
+    types: [opened, reopened, synchronize]
 
-# permissions:
-#   contents: write
+permissions:
+  contents: read
+  pull-requests: write
 
-# jobs:
-#   call-shared-workflow:
-#     uses: AdrienMS-Cap/tst-shared-pipeline/.github/workflows/auto_merge.yml@main
-#     with:
-#       pull_request_number: ${{ github.event.pull_request.number }}
+jobs:
+  call-approve-workflow:
+    uses: AdrienMS-Cap/tst-shared-pipeline/.github/workflows/approve.yml@main
+    with:
+      pull_request_number: ${{ github.event.pull_request.number }}
