--- a/.github/workflows/use-shared-workflow.yml
+++ b/.github/workflows/use-shared-workflow.yml
@@ -1,9 +1,11 @@
-name: Call Shared Ansible Lint Workflow
+name: Call Shared Workflow
 
-on: [push]
+on:
+  push:
+  pull_request:
+    types: [opened, reopened, synchronize]
 
-permissions:
-  contents: write
+permissions: write-all
 
 jobs:
   call-shared-workflow:
@@ -11,3 +13,9 @@ jobs:
     with:
       repository: ${{ github.repository }}
       branch: ${{ github.ref_name }} 
+  call-approve-workflow:
+    needs: [call-shared-workflow]
+    uses: AdrienMS-Cap/tst-shared-pipeline/.github/workflows/auto_merge.yml@main
+    with:
+      repository: ${{ github.repository }}
+      pull_request_number: ${{ github.event.pull_request.number }}
