--- a/.github/workflows/use-shared-workflow.yml
+++ b/.github/workflows/use-shared-workflow.yml
@@ -2,6 +2,8 @@ name: Call Shared Workflow
 
 on:
   push:
+    branches-ignore:
+      - feature  # or your default branch
   pull_request:
     types: [opened, reopened, synchronize]
 
