--- a/.github/workflows/use-shared-workflow.yml
+++ b/.github/workflows/use-shared-workflow.yml
@@ -12,6 +12,7 @@ permissions: write-all
 
 jobs:
   call-shared-workflow:
+    if: github.event_name == 'push'
     uses: AdrienMS-Cap/tst-shared-pipeline/.github/workflows/create_workflow.yml@main
     with:
       repository: ${{ github.repository }}
