--- a/.github/workflows/use-shared-workflow.yml
+++ b/.github/workflows/use-shared-workflow.yml
@@ -16,4 +16,4 @@ jobs:
     if: github.event_name == 'pull_request'
     uses: AdrienMS-Cap/tst-shared-pipeline/.github/workflows/pr_workflow.yml@main
     with:
-      github-token: ${{ secrets.GITHUB_TOKEN }}
+      github-token: ${{ github.token }}
