--- a/hello.yml
+++ b/hello.yml
@@ -4,4 +4,4 @@
   tasks:
     - name: Print Hello World
       ansible.builtin.debug:
-        msg: "Hello world, it's me in feature 9 and i'm doing changes. Change1 Should pass a!"
+        msg: "Hello world, it's me in feature 9 and i'm doing changes. Change1 Should pass !"
