--- a/hello.yml
+++ b/hello.yml
@@ -4,11 +4,4 @@
   tasks:
     - name: Print Hello World
       ansible.builtin.debug:
-        msg: "Hello world, it's me in feature 7 and i'm doing changes. Change1! Should not pass"
-
-
-
-
-
-
-
+        msg: "Hello world, it's me in feaature 9 and i'm doing changes. Change1 Should pass !"
